Actual version for 27/05/2020
Consist of:
- main page (80%, waiting for Alina's design);
- about us page (full - without background line);
- quiz script;
- svg images;

--- a/index.html
+++ b/index.html
@@ -5,7 +5,6 @@
 	<link rel="stylesheet" type="text/css" href="css/style.css">
 	<meta charset="utf-8">
 	<link href="https://fonts.googleapis.com/css?family=Roboto:300,400,500,600,700&amp;subset=cyrillic" rel="stylesheet">
-	<script src="../Opushka_digital/js/scripts.js"></script>
 </head>
 
 <body>
@@ -17,14 +16,14 @@
 
 		<nav class="header__nav">
 		
-			<a class="header__logo" href="index.html"><img src="images/logo.png" width="100" height="100" alt="Разработка и дизайн сайтов и приложений любой сложности"></a>
+			<a class="header__logo" href="index.html"><img src="images/logo.svg" width="100" height="100" alt="Разработка и дизайн сайтов и приложений любой сложности"></a>
 
 			<ul class="header__menu">
 
 				<li><a class="header__link visually-hidden" href="index.html">Главная</a></li>
 				<li><a class="header__link" href="index.html" title="Там очень много всего">Услуги</a></li>
 				<li><a class="header__link" href="index.html" title="Наши кейсы">Проекты</a></li>
-				<li><a class="header__link" href="index.html" title="Чуть-чуть для познакомиться, чтобы все было прозрачно">О нас</a></li>
+				<li><a class="header__link" href="about/index.html" title="Чуть-чуть для познакомиться, чтобы все было прозрачно">О нас</a></li>
 
 			</ul>
 
@@ -89,7 +88,7 @@
 			</li>
 
 			<li class="nav-block__blocks">
-			<a href="#">
+			<a href="about/index.html">
 
 				<h3 class="nav-block__h3">О нас 
 					<svg width="31" height="8" viewBox="0 0 31 8" fill="none" xmlns="http://www.w3.org/2000/svg">
@@ -373,5 +372,6 @@
 
 </div>
 </footer>
+	<script src="js/scripts.js"></script>
 </body>
 </html>
